z-index fixes, opacity overlay chrome fix

--- a/dev/scss/partials/_film-overlay.scss
+++ b/dev/scss/partials/_film-overlay.scss
@@ -6,7 +6,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    z-index: 200;
+    z-index: 35;
     //easeInExpo
     transition: all 0.4s cubic-bezier(1, 0, 0, 1);
     overflow-y: scroll;
@@ -21,7 +21,7 @@
     margin: 0 0 1.5em 0;
     @include breakpoint(small-tablet){
         font-size: 1.5em;
-        margin: 0 0 3em 0;
+        margin: 2.5em 0 2.5em 0;
     }
 }
 
@@ -40,6 +40,7 @@
     height: 100%;
     padding: 1em;
     transition: all 0.6s cubic-bezier(1, 0, 0, 1);
+    display: table;
 }
 
 .film-overlay-content{
@@ -48,8 +49,8 @@
     padding: 6em 15% 0 15%;
     @include breakpoint(small-tablet){
         position: relative;
-        top: 50%;
-        transform: perspective(1px) translateY(-50%);
+        display: table-cell;
+        vertical-align: middle;
         padding: 0 20% 0 20%;
     }
 }
@@ -65,7 +66,7 @@
     text-transform: uppercase;
     cursor: pointer;
     transition: all 0.2s ease-out;
-    z-index: 210;
+    z-index: 40;
     @include breakpoint(small-tablet){
         font-size: 1em;
     }
@@ -74,7 +75,7 @@
 .is-overlay{
     #overlay-close{
         top: 60px;
-        transition: all 0.6s ease-in;
+        transition: all 0.4s ease-in;
         @include breakpoint(small-tablet){
             top: 12px;
         }
