--- a/dev/scss/partials/_global.scss
+++ b/dev/scss/partials/_global.scss
@@ -111,11 +111,11 @@ html.loading{
     display: none;
     @include breakpoint(ipad-vert){
         display: block;
-        z-index: 1;
+        z-index: 10;
     }
     &.active{
         transition: all 0.4s ease-in;
         opacity: 0.8;
-        z-index: 100;
+        z-index: 40;
     }
 }
