--- a/dev/scss/partials/_header.scss
+++ b/dev/scss/partials/_header.scss
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     transition: all 0.4s ease-out;
     line-height: 19px;
-    z-index: 210;
+    z-index: 40;
     &.in-view{
         top: 0;
         transition: all 0.4s ease-in;
