--- a/dev/scss/partials/_home.scss
+++ b/dev/scss/partials/_home.scss
@@ -107,14 +107,13 @@
     .play-icon{
         position: absolute;
         color: #000;
-        bottom: 50%;
         left: 50%;
+        bottom: -3em;
         margin-bottom: -20px;
-        margin-left: -20px;
+        margin-left: -36px;
         font-size: 40px;
-        z-index: 150;
+        z-index: 30;
         @include breakpoint(ipad-horiz){
-            bottom: -3em;
             margin-bottom: -25px;
             margin-left: -25px;
             font-size: 50px;
@@ -125,10 +124,18 @@
     }
 }
 
+html.touch{
+    .vid-content{
+        .play-icon{
+            bottom: 50%;
+        }
+    }
+}
+
 .vid-content{
     img{
         filter: grayscale(1);
-        filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\' filterRes=\'800\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
+        filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\' filterRes=\'800\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
         @include breakpoint(ipad-vert){
             transition: all 0.2s ease-out;
         }
@@ -142,14 +149,11 @@
     .film-info{
         background: #FFF;
         position: absolute;
-        z-index: 100;
+        z-index: 35;
         width: 100%;
-        bottom: 0;
-        @include breakpoint(ipad-horiz){
-            bottom: -4em;
-            //eastOutQuint
-            transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-        }
+        bottom: -4em;
+        //eastOutQuint
+        transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
         h2{
             margin: 0;
             font-weight: 400;
@@ -163,33 +167,40 @@
     }
 }
 
+html.touch{
+    .vid-content{
+        .film-info{
+            bottom: 0;
+        }
+    }
+}
+
 .vid-content{
     a{
         display: block;
         cursor: pointer;
+    }
+}
+
+html.no-touch{
+    a{
         &:hover{
             img{
-                @include breakpoint(ipad-horiz){
-                    transform: scale3d(1.05, 1.05, 1.05);
-                    transition: all 0.4s ease-in;
-                    filter: none;
-                    opacity: 0.7;
-                }
+                transform: scale3d(1.05, 1.05, 1.05);
+                transition: all 0.4s ease-in;
+                filter: none;
+                opacity: 0.7;
             }
             .play-icon{
-                @include breakpoint(ipad-horiz){
-                    bottom: 50%;
-                    opacity: 1;
-                    //easeOutExpo
-                    transition: all 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-                }
+                bottom: 50%;
+                opacity: 1;
+                //easeOutExpo
+                transition: all 0.4s cubic-bezier(0.19, 1, 0.22, 1);
             }
             .film-info{
-                @include breakpoint(ipad-horiz){
-                    //easeInQuint
-                    transition: all 0.4s cubic-bezier(0.755, 0.05, 0.855, 0.06);
-                    bottom: 0;
-                }
+                //easeInQuint
+                transition: all 0.4s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+                bottom: 0;
             }
         }
     }
